# llm-inference-experiments

./: .env.example  .gitignore  CLAUDE.md  INTERFACE.md  PROJECT_OVERVIEW.md  PROOF_OF_CONCEPTS.md  README.md  pyproject.toml
.claude/commands/: commit.md
.claude/skills/pr-squash-merge/: SKILL.md
docs/: DASHBOARD_PLAN.md  IMPLEMENTATION_PLAN.md
experiments/base/: sglang-defaults.yaml  vllm-defaults.yaml
experiments/examples/: baseline-sglang.yaml  baseline-vllm.yaml  batch-workload.yaml  concurrency-sweep.yaml  multi-turn-conversation.yaml  quick-smoke-test-sglang.yaml  quick-smoke-test.yaml
poc/: CLAUDE.md  poc_01_runpod_api_basics.py  poc_02_runpod_connectivity.py  poc_03_deploy_vllm.py  poc_04_deploy_sglang.py
prompts/: baseline.jsonl
prompts/multi-turn/: conversations.jsonl  scripted.jsonl
src/llm_inf_bench/: cli.py
src/llm_inf_bench/config/: loader.py  schema.py  sweep.py  validation.py
src/llm_inf_bench/dashboard/: __init__.py  events.py  experiment_manager.py  log_handler.py  server.py  websocket.py
src/llm_inf_bench/metrics/: aggregator.py  collector.py  gpu.py  storage.py
tests/: conftest.py  test_cli.py
tests/config/: test_loader.py  test_schema.py  test_sweep.py  test_validation.py
tests/metrics/: test_aggregator.py  test_collector.py  test_gpu.py  test_storage.py
tests/output/: test_comparison.py  test_summary.py
tests/runners/: conftest.py  test_factory.py  test_openai_compat.py  test_sglang.py  test_vllm.py
tests/workloads/: test_batch.py  test_concurrent.py  test_factory.py  test_multi_turn.py  test_single.py
(+22 files in other folders)
