[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-inf-bench"
version = "0.1.0"
description = "Benchmarking and observability framework for LLM inference on RunPod GPUs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "rich>=13.0",
    "typer>=0.12",
    "runpod>=1.7",
]

[project.optional-dependencies]
prometheus = ["prometheus-client>=0.20"]
analysis = ["pandas>=2.0", "matplotlib>=3.8"]

[dependency-groups]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "pytest-cov>=5.0", "mypy>=1.10", "ruff>=0.5"]

[project.scripts]
llm-inf-bench = "llm_inf_bench.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_inf_bench"]

[tool.ruff]
src = ["src"]
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["llm_inf_bench"]
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
